more makefile generalization

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,10 +1,10 @@
-EXE_OUTPUT=$(ROOTD)/build/
+EXE_OUTPUT=$(D_ROOT)/build/
 CFLAGS=-Wall
 
 all: prime.o
 
 clean:
-	rm *.o
+	rm -f *.o
 
 prime.o: prime.c prime.h
 	$(CC) $(CFLAGS) -c prime.c
