--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,13 +1,12 @@
 EXE_OUTPUT=$(D_ROOT)/build/
 CFLAGS=-Wall
 
-all: prime.o
+OBJECTS = prime fastexp
+
+all: $(OBJECTS:=.o)
 
 clean:
-	rm -f *.o
+	rm -f $(OBJECTS:=.o)
 
-prime.o: prime.c prime.h
-	$(CC) $(CFLAGS) -c prime.c
-
-fastexp.o: fastexp.c fastexp.h
-	$(CC) $(CFLAGS) -c fastexp.c
+$(OBJECTS:=.o): %.o: %.c %.h
+	$(CC) $(CFLAGS) -c $(word 1,$^)
