--- a/test/Makefile
+++ b/test/Makefile
@@ -36,6 +36,6 @@ alltests: $(TEST_FILES)
 endif
 
 
-$(TEST_FILES): %: $(D_LIB)/%.o %.c test.h
+$(TEST_FILES): %: %.c test.h $(TEST_FILES:%=$(D_LIB)/%.o)
 	$(CC) $(CFLAGS) -o $@ $@.c $(TEST_FILES:%=$(D_LIB)/%.o) $(EXTERNAL_LIBS)
 
